# rclone

./: README.md  pyproject.toml
rclone/: __init__.py  main.py
rclone/mods/: helper.py
